tests/snapshots/cli__gen_bin@print__print-false.my.snap
---
source: tests/cli.rs
info:
  program: print-false.my.out
  args: []
input_file: tests/input/print/print-false.my
---
success: true
exit_code: 0
----- stdout -----
false

----- stderr -----
