tests/snapshots/cli__gen_bin@print__print-nil.my.snap
---
source: tests/cli.rs
info:
  program: print-nil.my.out
  args: []
input_file: tests/input/print/print-nil.my
---
success: true
exit_code: 0
----- stdout -----
nil

----- stderr -----
