tests/snapshots/cli__gen_bin@print__print-true.my.snap
---
source: tests/cli.rs
info:
  program: print-true.my.out
  args: []
input_file: tests/input/print/print-true.my
---
success: true
exit_code: 0
----- stdout -----
true

----- stderr -----
